--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,34 +5,22 @@
     <li data-target="#demo" data-slide-to="2"></li>
     <li data-target="#demo" data-slide-to="3"></li>
   </ul>
-  <div class="carousel-inner" style="width: 80%;height: 70%;margin: auto;">
+  <div class="carousel-inner" style="width: 150%;height: 50%;margin: auto;">
     <div class="carousel-item active">
       <img src="https://assets-listings.rew.ca/brc_idx_rew/brc/R2508646/20201015020501/01.jpeg" alt="Building Image" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>Sweet Home</h3>
-        <p>There's no place like Home !</p>
-      </div>   
+         
     </div>
     <div class="carousel-item">
       <img src="https://s3-us-west-2.amazonaws.com/avenuehq-listings/fvrebgv/000/262/425/a2466aedba6660d5dab5ea42470aeacfd7144ae7.jpg?lastModified=2019-09-10T16:44:01Z&fit=clip&w=1140" alt="Home Space" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>Home Space</h3>
-        <p>Hearts can build a home :)</p>
-      </div>   
+      
     </div>
     <div class="carousel-item">
       <img src="https://rentitfurnished.com/vancouver/wp-content/uploads/sites/2/2019/01/12-1.jpg" alt="Outside View" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>New Home</h3>
-        <p>Home is made of Love and Dreams !</p>
-      </div>   
+         
     </div>
     <div class="carousel-item">
       <img src="https://s.realtyninja.com/static/images/listings/hd/4839_l21a7aa00_262349105-14.JPG" alt="Outside View" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>Relaxing</h3>
-        <p>Healthier Life :D</p>
-      </div>   
+        
     </div>
   </div>
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -119,9 +107,17 @@
          phone and cable are bundled and the rate is lowered by utilizing the Shaw Program,
          resulting in substantial annual savings!
       </p>
+
+      <a href="https://www.uniqueaccommodations.com/docs/ShawPackage.pdf">
+        <button class='read'> Read More > </button>
+      </a>
+
     </div>
   </div>
 </div>
+<br/>
+
+
 
 <footer style="text-align:center;">
     <div>
@@ -138,9 +134,9 @@
     </div>
     <br>
     <div>
-      <a href="" style="color:white">Posts   |</a> 
-      <a href="" style="color:white"> New Post   |</a> 
-      <a href="" style="color:white"> Inquiry Form  </a> 
+      <a href="" style="color:black">Posts  </a> |
+      <a href="" style="color:black"> New Post </a> |
+      <a href="" style="color:black"> Inquiry Form  </a> 
     </div>
     <br/>
     <hr>  
