--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,12 +6,15 @@
     margin-top:10px;
 }
 
-nav , h3{
+ h3{
     font-family:Cursive;
 }
+
+
+
 footer{
-    background-color:grey;
-    color:white;
+    background-color:#ebfafa;
+    color:black;
     height:350px;
     margin-bottom:15px;
     padding:20px;
@@ -55,3 +58,41 @@ footer{
     background: #125688;
     color: white;
   }
+
+  .read{
+    background-color:red;
+    color:white;
+    padding:5px;
+
+  }
+
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    background-color:#000080;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
+  
+  .section{
+    border:2px groove;
+    padding:30px;
+  }
+
+  .card-body{
+    background-color: #ebfafa;
+  }
+
+  
