--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,27 +1,14 @@
 <main class="container">
-    <nav class="navbar navbar-expand-sm">
         
 
-        <ul class="navbar-nav mr-auto">
-          
-          <li class="nav-item active">
-            <%= link_to 'Home', root_path  %>
-          </li>
-          
+  <ul style="font-family:Cursive">
+      <li><%= link_to 'Home', root_path  %></li>
+      <li><%= link_to 'Posts'%></li>
+      <li><%= link_to 'New Post' %></li>
+      <li><%= link_to 'Inquiry Form' %></li>
+  </ul>
 
-          <li class="nav-item ml-4">
-            <%= link_to 'Posts'%>
-          </li>
-
-          <li class="nav-item ml-3">
-            <%= link_to 'New Post' %>
-          </li>
-
-          <li class="nav-item ml-2">
-            <%= link_to 'Inquiry Form' %>
-          </li>
-
-          <%# <li class="nav-item mr-2">
+<%# <li class="nav-item mr-2">
             <% if user_signed_in? %>
                  <%# Hello  <%= link_to current_user.name ,edit_user_path(current_user.id) %> 
                  <%# <%= link_to "Logout", session_path, method: :delete, %>
@@ -32,6 +19,4 @@
                 <%# <%= link_to "Sign Up", new_user_path %> 
             <%# <% end %> 
           <%# </li> %>
-        </ul>
-    </nav>
 </main>
