--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -89,6 +89,11 @@ footer{
   .section{
     border:2px groove;
     padding:30px;
+    margin-left:350px; 
+    margin-top:20px;
+    height:450px;
+    width:400px;
+    background-color: #F5FFFA;
   }
 
   .card-body{
