--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,6 +17,6 @@
     <%= f.text_area :Description, cols:30 ,rows:4,class:"form-control" %>
   </div>
 
-  <%= f.submit "Add New Announcement", class:"btn btn-success"  %>
+  <%= f.submit "Add New Announcement", class:"btn btn-info"  %>
   
 <% end %>
