--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,8 +3,8 @@
 
   <ul style="font-family:Cursive">
       <li><%= link_to 'Home', root_path  %></li>
-      <li><%= link_to 'Posts'%></li>
-      <li><%= link_to 'New Post' %></li>
+      <li><%= link_to 'Posts', posts_path %></li>
+      <li><%= link_to 'New Post', new_post_path %></li>
       <li><%= link_to 'Inquiry Form' %></li>
   </ul>
 
