--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,17 @@
+<div class='row container mx-auto'>
+<div>
+    <img src="https://www.wallpaperbetter.com/wallpaper/459/673/133/buildings-skyscrapers-seattle-hd-2K-wallpaper.jpg" height='550px'width='450px';>
+</div>
 
 <div class='section'>
-<div class='container'>
     <img src="https://previews.123rf.com/images/indomercy/indomercy1701/indomercy170100277/69902040-email-box-icon-color.jpg" height='50px'width='50px';> 
     <span><b  style="font-family:Cursive;">New Post</b></span>
-</div>
 <hr>
 <br/>
 <%= render 'form'%>
 </div>
+</div>
+
+
+
 
