--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,15 +6,22 @@
 <% end %>
 
   <div class="form-group">
-    <strong><%= f.label :Title %></strong>
+    <strong><%= f.label :title %></strong>
     <br>
-    <%= f.text_field :Title, class:"form-control" %>
+    <%= f.text_field :title, class:"form-control" %>
   </div>
 
   <div class="form-group">
-    <strong><%= f.label :Description %></strong>
+    <strong><%= f.label :image_url %></strong>
     <br>
-    <%= f.text_area :Description, cols:30 ,rows:4,class:"form-control" %>
+    <%= f.text_field :image_url, class:"form-control" %>
+  </div>
+
+
+  <div class="form-group">
+    <strong><%= f.label :description %></strong>
+    <br>
+    <%= f.text_area :description, cols:30 ,rows:4,class:"form-control" %>
   </div>
 
   <%= f.submit "Add New Announcement", class:"btn btn-info"  %>
