--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,40 +1,42 @@
-<div id="demo" class="carousel slide" data-ride="carousel">
-  <ul class="carousel-indicators">
+<div id="demo" class="carousel slide container-fluid" data-ride="carousel">
+  <ol class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
     <li data-target="#demo" data-slide-to="3"></li>
-  </ul>
-  <div class="carousel-inner" style="width: 150%;height: 50%;margin: auto;">
+  </ol>
+  <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://assets-listings.rew.ca/brc_idx_rew/brc/R2508646/20201015020501/01.jpeg" alt="Building Image" width="1100" height="500">
+      <img src="https://image.shutterstock.com/image-illustration/modern-residential-buildings-city-3d-600w-1309828531.jpg" alt="Building Image" width="1700" height="300">
          
     </div>
     <div class="carousel-item">
-      <img src="https://s3-us-west-2.amazonaws.com/avenuehq-listings/fvrebgv/000/262/425/a2466aedba6660d5dab5ea42470aeacfd7144ae7.jpg?lastModified=2019-09-10T16:44:01Z&fit=clip&w=1140" alt="Home Space" width="1100" height="500">
+      <img src="http://d2kcmk0r62r1qk.cloudfront.net/imageSponsors/xlarge/2016_04_13_01_48_31_160405-605x.jpg" alt="Home Space" width="1700" height="300">
       
     </div>
     <div class="carousel-item">
-      <img src="https://rentitfurnished.com/vancouver/wp-content/uploads/sites/2/2019/01/12-1.jpg" alt="Outside View" width="1100" height="500">
+      <img src="https://www.6717000.com/callrealestate/images/2016/05/06/prev003-small.jpg" alt="Outside View" width="1700" height="300">
          
     </div>
     <div class="carousel-item">
-      <img src="https://s.realtyninja.com/static/images/listings/hd/4839_l21a7aa00_262349105-14.JPG" alt="Outside View" width="1100" height="500">
+      <img src="https://s.realtyninja.com/static/images/listings/hd/4839_l21a7aa00_262349105-14.JPG" alt="Outside View" width="1700" height="300">
         
     </div>
   </div>
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
 </div>
 
 <br/>
 <div><h3 style="text-align:center;font-family:Cursive">Condo Walkthrough</h3></div>
 <br>
-<div class="max-width-container">
+<div class="container">
 <div class="row card-deck">
 
       <div class="card" style="width: 18rem;">
@@ -67,16 +69,18 @@
 </div>
 <br />
 <br>
-<div class="container row">
+<br>
+<div class="container mx-10">
+<div class='row'>
 <div class="col">
   <div><h3>Building Info</h3></div>
-  <p>Venue - 13768 108 Avenue,Surrey,BC V3T 2K7,Canada. Strata Plan number BCP31151. Crossroads are 108
+  <p style="text-align: justify;">Venue - 13768 108 Avenue,Surrey,BC V3T 2K7,Canada. Strata Plan number BCP31151. Crossroads are 108
      Avenue and 138 Street. This development is 5 storeys with 141 units. Estimated completion in March
      of 2018. A great place to wind down after a hard day with a 2,100 sq ft rooftop deck, city and mountain 
      views, plus an adjoining 700 sq ft gathering space venue. Developed by Tien Sher Homes. Architectural 
      design by Taizo Yamamoto of Yamamoto Architecture Inc..,
   </p>
-  <p> Nearby parks include Erma Stephenson Park, North Point Park and Fraser heights Park. Nearby schools are 
+  <p style="text-align: justify;"> Nearby parks include Erma Stephenson Park, North Point Park and Fraser heights Park. Nearby schools are 
       Forsyth Road Elementary School, Mary Jane Shannon Elementary, K B Woodward Elementary, James Ardiel Elementary,
       Guildford Park Secondary School, Ellendale Elementary, King George International College and City Central Learning Centre.
       Nearby grocery stores are African Superstore, 7 Days Seafood & grocery, Bentley Convenience Store, Lucky Convenience Store,
@@ -89,9 +93,11 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2607.110934232436!2d-122.84275158431348!3d49.19845507932225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5485d78467c1a405%3A0x66f9049d523cee3c!2s13768%20108%20Ave%2C%20Surrey%2C%20BC%20V3T%204K8!5e0!3m2!1sen!2sca!4v1613779111530!5m2!1sen!2sca" width="500" height="400" style="border:0;margin-right:30px;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 </div>
+</div>
 <br>
-<hr>
-<div class="container">
+<hr style="width:1200px;">
+<br/>
+<div class="container mx-10">
   <div class="row">
     
     <div class="col">
@@ -99,10 +105,10 @@
     </div>
     <div class="col">
       <h3> Our Unique Shaw Program</h3>
-      <p>At Unique, we are always finding ways to provide more value and service 
-         to our tenants and homeowners and this is particularly evident with our Shaw
-         Program. By partnering with Shaw Cable Systems, Western Canada's leading 
-         entertainment and communications provider, we are now able to offer financial 
+      <p style="text-align: justify;">At Unique, we are always finding ways to provide more value and service 
+         to our tenants and homeowners and this is particularly evident with our 
+         Shaw Program. By partnering with Shaw Cable Systems, Western Canada's 
+         leading entertainment and communications provider, we are now able to offer financial 
          savings and entertainment convenience to our tenants.The Shaw services for internet,
          phone and cable are bundled and the rate is lowered by utilizing the Shaw Program,
          resulting in substantial annual savings!
@@ -116,10 +122,11 @@
   </div>
 </div>
 <br/>
+<br/>
+<br/>
+<br/>
 
-
-
-<footer style="text-align:center;">
+<footer class="container-fluid" style="text-align:center;">
     <div>
         <h5> Follow Us </h5>
             <a href="" class="fa fa-facebook"></a>
@@ -139,7 +146,7 @@
       <a href="" style="color:black"> Inquiry Form  </a> 
     </div>
     <br/>
-    <hr>  
+    <hr style="border-style: groove">  
     <p> Copyright © 2021  - All Rights Reserved. </p>
 
 
