--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,20 +7,19 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://image.shutterstock.com/image-illustration/modern-residential-buildings-city-3d-600w-1309828531.jpg" alt="Building Image" width="1700" height="300">
+      <img src="view1.jpg" alt="Building Image" height="350px;" width="1500px">
          
     </div>
     <div class="carousel-item">
-      <img src="http://d2kcmk0r62r1qk.cloudfront.net/imageSponsors/xlarge/2016_04_13_01_48_31_160405-605x.jpg" alt="Home Space" width="1700" height="300">
+      <img src="http://d2kcmk0r62r1qk.cloudfront.net/imageSponsors/xlarge/2016_04_13_01_48_31_160405-605x.jpg" alt="Home Space" height="350px;" width="1500px">
       
     </div>
     <div class="carousel-item">
-      <img src="https://www.6717000.com/callrealestate/images/2016/05/06/prev003-small.jpg" alt="Outside View" width="1700" height="300">
+      <img src="https://www.6717000.com/callrealestate/images/2016/05/06/prev003-small.jpg" alt="Outside View"height="350px;" width="1500px">
          
     </div>
     <div class="carousel-item">
-      <img src="https://s.realtyninja.com/static/images/listings/hd/4839_l21a7aa00_262349105-14.JPG" alt="Outside View" width="1700" height="300">
-        
+      <img src="https://s.realtyninja.com/static/images/listings/hd/4839_l21a7aa00_262349105-14.JPG" alt="Outside View" height="350px;" width="1500px">   
     </div>
   </div>
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
