--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,7 +7,21 @@
     font-family:Cursive;
 }
 
-
+.upbutton{
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+.upbutton:hover {opacity: 1}
 
 footer{
     background-color:#ebfafa;
@@ -153,4 +167,14 @@ footer{
       padding-left: 1rem;
   }
 }
+
+.signup{
+   width: 100%;
+   height: 350px;
+   align-items: center;
+   justify-content: space-around;
+   display: flex;
+  
+}
+
 
