--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,22 +1,26 @@
 <main class="container">
         
 
-  <ul style="font-family:Cursive">
+  <ul style="font-family:Cursive;">
       <li><%= link_to 'Home', root_path  %></li>
       <li><%= link_to 'Posts', posts_path %></li>
       <li><%= link_to 'New Post', new_post_path %></li>
-      <li><%= link_to 'Inquiry Form' %></li>
-  </ul>
-
-<%# <li class="nav-item mr-2">
+      
+    
             <% if user_signed_in? %>
-                 <%# Hello  <%= link_to current_user.name ,edit_user_path(current_user.id) %> 
-                 <%# <%= link_to "Logout", session_path, method: :delete, %>
-                   <%# data: {confirm: 'Are you sure you want to log out?'} %>
-                
-              <%# <% else %> 
-                <%# <%= link_to "Login", new_session_path %>  
-                <%# <%= link_to "Sign Up", new_user_path %> 
-            <%# <% end %> 
-          <%# </li> %>
+               
+                <li style="float:right"> <%= link_to "Logout", session_path, method: :delete,
+                   data: {confirm: 'You want to log out?'}
+                %></li>
+                 <li style="float:right"><img src="signin.webp" height='50px;' width='50px'><%= current_user.first_name  %> </li>
+              <% else %>
+                <li style="float:right;"><%= link_to "Sign up", new_user_path %>  </li>
+                <li style="float:right"><%= link_to "Sign in", new_session_path %></li>
+               
+            <% end %>
+      
+         
+  </ul> 
+
+
 </main>
