--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container signup">
    
 <%= form_with model: @user, local:true do |f|%>
-    <h3 style="text-align:center"> Sign Up </h3>
+    <h3 style="text-align:center;font-family:Cursive"> Sign Up </h3>
     <br/>
     <% if @user.errors.any? %>
     <p>
