--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,7 +3,7 @@
     margin-top:10px;
 }
 
- h3{
+h3 {
     font-family:Cursive;
 }
 
@@ -22,6 +22,15 @@
   cursor: pointer;
 }
 .upbutton:hover {opacity: 1}
+
+
+#inbutton{
+  background-color: #ff0066;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+}
+
 
 footer{
     background-color:#ebfafa;
@@ -168,7 +177,7 @@ footer{
   }
 }
 
-.signup{
+.signup ,.signin{
    width: 100%;
    height: 350px;
    align-items: center;
@@ -176,5 +185,7 @@ footer{
    display: flex;
   
 }
+
+
 
 
