--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,26 +1,40 @@
 <main class="container">
         
+<nav class="navbar navbar-expand">
+        
 
-  <ul style="font-family:Cursive;">
-      <li><%= link_to 'Home', root_path  %></li>
-      <li><%= link_to 'Posts', posts_path %></li>
-      <li><%= link_to 'New Post', new_post_path %></li>
-      
-    
+        <ul class="navbar-nav" style="font-family:Cursive">
+          
+          <li class="nav-item active">
+            <%= link_to 'Home', root_path  %>
+          </li>
+          
+           <li class="nav-item active">
+            <%= link_to 'Posts', posts_path  %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to 'New Post', new_post_path %>
+          </li>
+
+          
             <% if user_signed_in? %>
-               
-                <li style="float:right"> <%= link_to "Logout", session_path, method: :delete,
-                   data: {confirm: 'You want to log out?'}
-                %></li>
-                 <li style="float:right"><img src="signin.webp" height='50px;' width='50px'><%= current_user.first_name  %> </li>
+                 <li><i class="fa fa-user-circle-o" style="font-size:30px"></i></li>
+                 <li><%= link_to current_user.first_name %> </li>
+                 <li>
+                    <%= link_to "Logout", session_path, method: :delete,
+                      data: {confirm: ' You want to log out?'}
+                    %>
+                 </li>
               <% else %>
-                <li style="float:right;"><%= link_to "Sign up", new_user_path %>  </li>
-                <li style="float:right"><%= link_to "Sign in", new_session_path %></li>
-               
+                <li><%= link_to "Sign in", new_session_path %></li>
+                <li> <%= link_to "Sign up", new_user_path %></li>
             <% end %>
-      
+          </li>
          
-  </ul> 
+        </ul>
+    </nav>
+ 
 
 
 </main>
