--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,56 +1,69 @@
  
 <div class="container">
-<h3><%= @post.title %></h3> 
-<img src="<%= @post.image_url %>" height='600px;' width='500px;'>
-<p><%= @post.description %></p>
+<div class='row'>
+    <div class="col">    
+        <img src="<%= @post.image_url %>" height='600px;' width='500px;'>   
+    </div>
+    <div class='col'>
+        <h3><%= @post.title %></h3>
+        <p><%= @post.description %></p>
+        <div>
+            <small>
+                <p>Posted <%= time_ago_in_words(@post.created_at) %> ago </p>
+            </small>
+             <p style="float:right">By <%= @post.user&.full_name || " " %></p>
+        </div>
 
-<div>
-    <small>
-        <p>Posted <%= time_ago_in_words(@post.created_at) %> ago </p>
-    </small>
+        <% if can? :crud, @post %>
+            <%= link_to("Edit", edit_post_path(@post.id), class:"btn btn-success")%>
+        <% end %>  
+        <% if can? :crud, @post %>  
+            <%= link_to("Delete",post_path(@post),method: :delete,data:{confirm: "Are you sure you want to delete ?"}, class:"btn btn-danger") %>
+        <% end %>  
+    </div>  
 </div>
-
- <%= link_to("Edit", edit_post_path(@post.id), class:"btn btn-success")%> 
- <%= link_to("Delete",post_path(@post),method: :delete,data:{confirm: "Are you sure you want to delete ?"}, class:"btn btn-danger") %>
 </div>
 <br><br><br>
+
 <div class="container">
-<div>
-<img src= "https://cdn0.iconfinder.com/data/icons/free-daily-icon-set/512/Comments-512.png" height='50px;' width='50px;'>
-<span><b style="font-family:Cursive">Comment</b></span>
-</div>
-<%= form_for [@post, @comment], local:true do |f| %>
+    <div>
+    <img src= "https://cdn0.iconfinder.com/data/icons/free-daily-icon-set/512/Comments-512.png" height='50px;' width='50px;'>
+    <span><b style="font-family:Cursive">Comment</b></span>
+    </div>
+    <%= form_for [@post, @comment], local:true do |f| %>
 
-<ul>
-<% if @comment.errors.full_messages.each do |msg|%>
+    <ul>
+    <% if @comment.errors.full_messages.each do |msg|%>
 
-    <li>
-        <%= msg %>
-    </li>
-<% end %>
-<% end %>
-</ul>
+        <li>
+            <%= msg %>
+        </li>
+    <% end %>
+    <% end %>
+    </ul>
 
 
-  <%= f.text_area :body, cols:30 ,rows:2,class:"form-control", placeholder:"Express your opinion here." %>
-<br>
-  <%= f.submit "Submit", class:"btn btn-info" %>
-<% end %>
-<br>
-<% @comments.each do |comment|%>
-<p>
-<%= comment.body %>
+    <%= f.text_area :body, cols:30 ,rows:2,class:"form-control", placeholder:"Express your opinion here." %>
+    <br>
+    <%= f.submit "Submit", class:"btn btn-info" %>
+    <% end %>
+    <br>
+    <% @comments.each do |comment|%>
+    <p>
+    <%= comment.body %>
 
-<div>
-    Commented
-    <%= time_ago_in_words(comment.created_at) %> ago <b> . </b>
-<span>
-
-    <%= link_to "Delete",post_comment_path(@post,comment), method: :delete,data: {confirm: "Are you sure?"} %>
-
-</span>
-</div>
-<hr>
-</p>
+    <div>
+          By 
+            <%= comment.user&.full_name || " " %>
+        
+            <%= time_ago_in_words(comment.created_at) %> ago <b> . </b>
+    <span>
+        <% if can? :crud, comment %>
+            <%= link_to "Delete",post_comment_path(@post,comment), method: :delete,data: {confirm: "Are you sure?"} %>
+        <% end %>
+    </span>
+    </div>
+    <hr>
+    </p>
 </div>
 <% end %>
