--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -11,15 +11,15 @@
          
     </div>
     <div class="carousel-item">
-      <img src="http://d2kcmk0r62r1qk.cloudfront.net/imageSponsors/xlarge/2016_04_13_01_48_31_160405-605x.jpg" alt="Home Space" height="350px;" width="1500px">
+      <img src="https://rentitfurnished.com/vancouver/wp-content/uploads/sites/2/2019/01/12-1.jpg" alt="Home Space" height="350px;" width="1500px">
       
     </div>
     <div class="carousel-item">
-      <img src="https://www.6717000.com/callrealestate/images/2016/05/06/prev003-small.jpg" alt="Outside View"height="350px;" width="1500px">
+      <img src="https://media.pixilinkserver.com//R/249/80/29/R2498029-24.jpg?h=500&w=700" alt="Outside View"height="350px;" width="1500px">
          
     </div>
     <div class="carousel-item">
-      <img src="https://s.realtyninja.com/static/images/listings/hd/4839_l21a7aa00_262349105-14.JPG" alt="Outside View" height="350px;" width="1500px">   
+      <img src="https://gowestshore.com/wp-content/uploads/ExternalLink_about-us-playground.jpg" alt="Outside View" height="350px;" width="1500px">   
     </div>
   </div>
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
@@ -120,6 +120,26 @@
     </div>
   </div>
 </div>
+<br/><br/><br/><br/>
+<div class="container mx-10">
+  <div class="row">
+    <div class="col">
+      <div class="card picture">
+            <img src="CT1.jpg" alt="Shara" style="width:100%;">
+            <h3>Shara Nixon</h3>
+            <p class="title care">Property Caretaker</p>
+      </div>
+    </div>
+    <div class="col">
+    <div class="card picture">
+            <img src="CT2.jpg" alt="Aaron"  style="width:100%;height:225px;">
+            <h3>Aaron Siebenga</h3>
+            <p class="title care">Property Caretaker</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <br/>
 <br/>
 <br/>
