--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -201,7 +201,7 @@ footer{
 }
 
 .background{
-  background-image: url("https://cdn.wallpapersafari.com/15/46/gUH0cV.jpg");
+  background-image: url("https://i.pinimg.com/originals/ee/9d/17/ee9d1700bf3b46c01993d88c9ee896dd.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-attachment: fixed;
@@ -236,4 +236,41 @@ footer{
   margin: auto;
   text-align: center;
   font-family: arial;
+}
+
+.faicon {    
+  float: right;
+  top: 36px;
+  right: 6px;
+  position: relative;
+  z-index: 2;
+  color: grey;
+}
+
+.editform{
+  background-image: url("https://www.shutterstock.com/blog/wp-content/uploads/sites/5/2020/07/shutterstock_582803470.jpg?w=750");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+  height:500px;
+}
+
+.edituser{
+   width: 100%;
+   height: 350px;
+   margin-top:40px;
+   align-items: center;
+   justify-content: space-around;
+   display: flex;
+}
+
+.requestform{
+  border:1px solid black;
+  padding:6px;
+  margin:40px;
+}
+
+.request{
+  margin:200px;
+  background-color: white;
 }
