--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
    
     
         <% if @user.errors.any? %>
-        <p>
+        <p style="color:white">
             <%= @user.errors.full_messages.join(', ')%>
         </p>
         <% end %>
