--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,12 +9,20 @@
             <%= link_to 'Home', root_path  %>
           </li>
           
-           <li class="nav-item active">
+          <li class="nav-item active">
             <%= link_to 'Posts', posts_path  %>
+          </li>
+
+          <li class="nav-item active">
+            <%= link_to 'Requests', requests_path %>
           </li>
 
           <li class="nav-item">
             <%= link_to 'New Post', new_post_path %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to 'New Request', new_request_path %>
           </li>
 
           
