--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_area :description, cols:30 ,rows:4,class:"form-control" %>
   </div>
 
-  <%= f.submit class:"btn btn-info"  %>
+  <%= f.submit class:"btn btn-info" ,style:"float:right" %>
   
 <% end %>
