added filter by title code

--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,3 +1,11 @@
+<div style="float:right;margin-right:120px;">
+ <%= form_tag posts_path, :method => 'get' do %>
+    <b>Filter by title</b>
+    <span><%= select_tag(:name, options_for_select([["Public Health Order",'Public Health Order'],["Operating Elevator",'Operating Elevator'],['Fire Alarm','Fire Alarm'],['Pest Control','Pest Control']]), {include_blank: true, :onchange => 'this.form.submit()'})  %></span>
+  <% end %> 
+</div>
+
+<br/><br/>
 <div class="grid-container container-sm">
         <% @posts.each do |post|%>    
             <div class="card mt-4">
