--- a/app/views/requests/_data.html.erb
+++ b/app/views/requests/_data.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <br/><br/>
-    <table class="table">
+    <table class="table" id="dataTable" cellspacing="0" width="100%">
     <thead class="thead-light">
       <tr>
         <th>Suite No</th>
