minor changes in navbar

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,7 +21,7 @@
            
         </div>
         <br>
-        <%= f.submit "Save", class:"btn btn-info"%>
+        <%= f.submit "Save", class:"btn btn-info", style:"float:right" %>
     <% end %>
 </div>
 </div>
