--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -160,9 +160,10 @@
     </div>
     <br>
     <div>
-      <a href="" style="color:black">Posts  </a> |
-      <a href="" style="color:black"> New Post </a> |
-      <a href="" style="color:black"> Inquiry Form  </a> 
+      <a href="/posts" style="color:black">Posts  </a> |
+      <a href="/requests" style="color:black">Requests  </a> |
+      <a href="/posts/new" style="color:black"> New Post </a> |
+      <a href="/requests/new" style="color:black"> New Request </a> 
     </div>
     <br/>
     <hr style="border-style: groove">  
